test/files/neg/t12543.check
t12543.scala:9: error: value of is not a member of object java.util.List
    val ss = java.util.List.of("Hello", who)
                            ^
one error found
